[gd_scene load_steps=8 format=3 uid="uid://d1lgx274v4w8s"]

[ext_resource type="Script" path="res://Practice/enemy_3d.gd" id="1_30vgh"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qowxv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p3cln"]
albedo_color = Color(1, 0.294118, 0.254902, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jawgy"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_m0qoy"]
radius = 8.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_7prwh"]
radius = 0.75
height = 2.15

[sub_resource type="SphereShape3D" id="SphereShape3D_58qxf"]

[node name="enemy3d" type="CharacterBody3D" groups=["Enemy"]]
script = ExtResource("1_30vgh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_qowxv")
surface_material_override/0 = SubResource("StandardMaterial3D_p3cln")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_jawgy")

[node name="AttackRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackRange"]
shape = SubResource("CylinderShape3D_m0qoy")

[node name="AttackArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackArea"]
shape = SubResource("CapsuleShape3D_7prwh")

[node name="DamageArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DamageArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)
shape = SubResource("SphereShape3D_58qxf")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
